processed/jira/txt/LU/LU-12999.txt
Key:        LU-12999
Summary:    gcc8 compile warning on string overflow in name_create_mdt
Link:       https://jira.whamcloud.com/browse/LU-12999
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Fri, 22 Nov 2019 04:43:49 +0000
Updated:    Sat, 29 May 2021 02:48:29 +0000
Resolved:   Mon, 16 Dec 2019 13:07:49 +0000

--- Description ---
/home/shaun/lustre-wc-rel/lustre/mgs/mgs_llog.c:1539:2: note: ‘sprintf’ output between 9 and 10 bytes into a destination of size 9
 sprintf(mdt_index, "-MDT%04x", i);
 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/shaun/lustre-wc-rel/lustre/mgs/mgs_llog.c:1539:30: error: ‘sprintf’ may write a terminating nul past the end of the destination [-Werror=format-overflow=]
 sprintf(mdt_index, "-MDT%04x", i);

--- Comment (gerrit, Sat, 29 May 2021 00:13:03 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/43321/

Subject: LU-12999 mgs: Cleanup string handling in name_create_mdt

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: f7a59078e3c37d25b22f90e158f737e26a320b5a

--- Comment (gerrit, Wed, 14 Apr 2021 23:19:46 +0000) ---
Olaf Faaland-LLNL (faaland1@llnl.gov) uploaded a new patch: https://review.whamcloud.com/43321

Subject: LU-12999 mgs: Cleanup string handling in name_create_mdt

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: aeb93ed5868af923096e714c055739ea7a5f646e

--- Comment (pjones, Mon, 16 Dec 2019 13:07:49 +0000) ---
Landed for 2.14

--- Comment (gerrit, Mon, 16 Dec 2019 06:00:03 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36817/

Subject: LU-12999 mgs: Cleanup string handling in name_create_mdt

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 298cdb5c0b6136b91e76c9c515bfbc2df99bae0b

--- Comment (gerrit, Fri, 22 Nov 2019 04:53:20 +0000) ---
Shaun Tancheff (stancheff@cray.com) uploaded a new patch: https://review.whamcloud.com/36817

Subject: LU-12999 mgs: Increase string buffer in name_create_mdt

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: e691efbeafeec6d21ff69b15c7b540ce1d6fc3c9
